feat: 家庭 AI 配置改模型池+功能绑定+物品定位改本地规则+LLM兜底落地——sys_family_ai_model.type 加 LOCAL(内置本地规则,每家庭一条不可删改),找物/放物可绑 LOCAL|LLM;新增 ItemLocalParser(找物闭集反向匹配+放物正则抽取「把X放Y的Z里」,零 token 离线),ItemAiService find/put 改本地优先+LLM 兜底(LOCAL/未配置纯本地,绑 LLM 本地覆盖不了才回 chatJson);FamilyAiConfigService.AiConfig 加 type/getFeatures 返 modelTypes/ensureLocalModel 懒创建/deleteModel+saveModel 拒绝 LOCAL;设置页模型池 LOCAL 内置角标不显编辑删除+功能下拉多类型过滤,i18n 中英补 LOCAL/builtin;migrations.sql V9.49 块+schema 注释;冒烟本地找物/放物/LLM兜底/LOCAL删除修改拒绝全绿,pytest 37 passed